--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@material-ui/icons": "^4.11.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
-    "firebase": "8.0.0",
+    "firebase": "^9.6.1",
     "moment": "^2.29.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.4",
+    "react-firebase-hooks": "^3.0.5",
     "styled-components": "^5.3.3",
     "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/sreegithub19/whatsapp-2.git",
+  "author": "<sreedhar.k@rakuten.com>",
+  "license": "MIT"
 }
-
