--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@material-ui/icons": "^4.11.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
-    "firebase": "^9.6.1",
+    "firebase": "8.0.0",
     "moment": "^2.29.1",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.5",
+    "react-firebase-hooks": "^3.0.4",
     "styled-components": "^5.3.3",
     "timeago-react": "^3.0.4"
   },
@@ -28,6 +28,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/sreegithub19/whatsapp-2.git",
-  "author": "<sreedhar.k@rakuten.com>",
+  "author": "<cpadmaja2003@gmail.com>",
   "license": "MIT"
 }
